--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
