--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://votex874.github.io/memory/",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
